--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IJl-U0-2s7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IJl-U0-2s7">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -74,12 +74,13 @@
                                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pvr-48-hzE">
                                                     <rect key="frame" x="25" y="118" width="283" height="20"/>
                                                     <subviews>
-                                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progressViewStyle="bar" trackImage="announcement_progress_track" translatesAutoresizingMaskIntoConstraints="NO" id="FOb-9L-We7">
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XH8-Xs-VfY" customClass="ZXProgressView">
                                                             <rect key="frame" x="0.0" y="0.0" width="174" height="20"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="174" id="DpC-Gq-F9m"/>
+                                                                <constraint firstAttribute="width" constant="174" id="Mz0-zM-Hhc"/>
                                                             </constraints>
-                                                        </progressView>
+                                                        </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阅读人数 50/100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5hh-dH-Ofu">
                                                             <rect key="frame" x="184" y="2" width="99" height="16"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -90,12 +91,12 @@
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstItem="5hh-dH-Ofu" firstAttribute="centerY" secondItem="pvr-48-hzE" secondAttribute="centerY" id="8CF-3Q-0lv"/>
-                                                        <constraint firstItem="FOb-9L-We7" firstAttribute="leading" secondItem="pvr-48-hzE" secondAttribute="leading" id="8gm-kT-zDx"/>
                                                         <constraint firstItem="5hh-dH-Ofu" firstAttribute="leading" secondItem="pvr-48-hzE" secondAttribute="leading" constant="184" id="A3q-Gu-2vL"/>
-                                                        <constraint firstItem="FOb-9L-We7" firstAttribute="top" secondItem="pvr-48-hzE" secondAttribute="top" id="Xl2-iz-b1O"/>
+                                                        <constraint firstAttribute="bottom" secondItem="XH8-Xs-VfY" secondAttribute="bottom" id="MSZ-tR-OWP"/>
                                                         <constraint firstAttribute="height" constant="20" id="eFp-sl-cg6"/>
-                                                        <constraint firstAttribute="bottom" secondItem="FOb-9L-We7" secondAttribute="bottom" id="kho-Su-dqB"/>
+                                                        <constraint firstItem="XH8-Xs-VfY" firstAttribute="leading" secondItem="pvr-48-hzE" secondAttribute="leading" id="euO-hO-9aH"/>
                                                         <constraint firstAttribute="trailing" secondItem="5hh-dH-Ofu" secondAttribute="trailing" id="plS-n2-kse"/>
+                                                        <constraint firstItem="XH8-Xs-VfY" firstAttribute="top" secondItem="pvr-48-hzE" secondAttribute="top" id="xSv-JE-z4k"/>
                                                     </constraints>
                                                     <connections>
                                                         <outletCollection property="fd_collapsibleConstraints" destination="eFp-sl-cg6" id="MgR-Nf-4yj"/>
@@ -128,7 +129,7 @@
                                         <connections>
                                             <outlet property="allReadingImage" destination="pZR-NV-edC" id="6SG-6p-HSh"/>
                                             <outlet property="contentLabel" destination="lBv-oT-hUI" id="E0E-Ec-0K9"/>
-                                            <outlet property="readingProgress" destination="FOb-9L-We7" id="9Zf-4c-D8u"/>
+                                            <outlet property="readingProgress" destination="XH8-Xs-VfY" id="nZo-qK-JXe"/>
                                             <outlet property="readingProgressLabel" destination="5hh-dH-Ofu" id="CxW-Tm-vxM"/>
                                             <outlet property="readingProgressView" destination="pvr-48-hzE" id="vPs-l7-VKl"/>
                                             <outlet property="timeLabel" destination="VZB-we-IjO" id="47w-Jn-tln"/>
@@ -397,6 +398,10 @@
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lu7-gd-Dqn">
                                             <rect key="frame" x="527" y="15" width="58" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="58" id="2q6-pd-Bfb"/>
+                                                <constraint firstAttribute="height" constant="25" id="Hw3-v4-h7a"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <state key="normal" title="发短信" backgroundImage="announcement_bt_sendmessage"/>
                                             <connections>
@@ -435,7 +440,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uax-fU-hUC">
-                                                    <rect key="frame" x="543" y="12" width="42" height="20"/>
+                                                    <rect key="frame" x="550" y="15" width="35" height="16"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.70196078431372544" green="0.69019607843137254" blue="0.6588235294117647" alpha="1" colorSpace="calibratedRGB"/>
@@ -806,7 +811,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="公告标题" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0LQ-ne-xKj">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="通知标题" placeholder="公告标题" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0LQ-ne-xKj">
                                                     <rect key="frame" x="15" y="12" width="549" height="20"/>
                                                     <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -1524,7 +1529,6 @@
         <image name="announcement_ic_allreading" width="60" height="60"/>
         <image name="announcement_ic_number" width="16" height="16"/>
         <image name="announcement_ic_time" width="12" height="12"/>
-        <image name="announcement_progress_track" width="116" height="13"/>
         <image name="announcement_read_green" width="16" height="14"/>
         <image name="announcement_teacherpick_bg" width="16" height="16"/>
         <image name="announcement_teacherpick_select" width="11" height="11"/>
