--- a/Aier360/Controllers/校园/短信账户/MessageAccount.storyboard
+++ b/Aier360/Controllers/校园/短信账户/MessageAccount.storyboard
@@ -225,6 +225,97 @@
             </objects>
             <point key="canvasLocation" x="1043" y="517"/>
         </scene>
+        <!--Message Record View Controller-->
+        <scene sceneID="1nz-Wx-1ii">
+            <objects>
+                <viewController storyboardIdentifier="ZXMessageRecordViewController" id="vWD-kU-dI6" customClass="ZXMessageRecordViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rfY-S4-kVq"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZXT-ay-wZF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AlH-IO-DbZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Hr-a6-A45">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXMessageRecordTableViewCell" rowHeight="65" id="Qud-GX-qTI" customClass="ZXMessageRecordTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qud-GX-qTI" id="29o-Zm-XBT">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gU1-Ag-EE0">
+                                                    <rect key="frame" x="15" y="10" width="40" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liP-eT-Q9L">
+                                                    <rect key="frame" x="15" y="38" width="31" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3aq-cM-mUo">
+                                                    <rect key="frame" x="545" y="10" width="40" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FQ-zQ-1aj">
+                                                    <rect key="frame" x="554" y="40" width="31" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.97647058823529409" green="0.56470588235294117" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3aq-cM-mUo" firstAttribute="top" secondItem="29o-Zm-XBT" secondAttribute="top" constant="10" id="Jt8-ee-KfJ"/>
+                                                <constraint firstItem="gU1-Ag-EE0" firstAttribute="top" secondItem="29o-Zm-XBT" secondAttribute="top" constant="10" id="S8b-Y5-SEn"/>
+                                                <constraint firstItem="liP-eT-Q9L" firstAttribute="leading" secondItem="29o-Zm-XBT" secondAttribute="leading" constant="15" id="TAR-D4-dVS"/>
+                                                <constraint firstItem="liP-eT-Q9L" firstAttribute="top" secondItem="gU1-Ag-EE0" secondAttribute="bottom" constant="8" id="TWP-yr-igM"/>
+                                                <constraint firstAttribute="trailing" secondItem="3aq-cM-mUo" secondAttribute="trailing" constant="15" id="ldB-Fq-KBY"/>
+                                                <constraint firstItem="9FQ-zQ-1aj" firstAttribute="top" secondItem="3aq-cM-mUo" secondAttribute="bottom" constant="10" id="lvM-1G-tac"/>
+                                                <constraint firstItem="gU1-Ag-EE0" firstAttribute="leading" secondItem="29o-Zm-XBT" secondAttribute="leading" constant="15" id="rWd-R4-6Px"/>
+                                                <constraint firstAttribute="trailing" secondItem="9FQ-zQ-1aj" secondAttribute="trailing" constant="15" id="v62-6b-U0f"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.96470588235294119" green="0.95294117647058818" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="9FQ-zQ-1aj" id="sk0-Qx-xyj"/>
+                                            <outlet property="numLabel" destination="3aq-cM-mUo" id="68T-x5-4LH"/>
+                                            <outlet property="timeLabel" destination="liP-eT-Q9L" id="cBO-fL-kwp"/>
+                                            <outlet property="titleLabel" destination="gU1-Ag-EE0" id="53R-r3-5vU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="vWD-kU-dI6" id="0ir-Ox-ida"/>
+                                    <outlet property="delegate" destination="vWD-kU-dI6" id="uWL-VS-hSZ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="6Hr-a6-A45" secondAttribute="trailing" id="3jV-6J-map"/>
+                            <constraint firstItem="6Hr-a6-A45" firstAttribute="top" secondItem="rfY-S4-kVq" secondAttribute="bottom" id="eSQ-E4-Z2b"/>
+                            <constraint firstItem="ZXT-ay-wZF" firstAttribute="top" secondItem="6Hr-a6-A45" secondAttribute="bottom" id="jKN-ZK-u4A"/>
+                            <constraint firstItem="6Hr-a6-A45" firstAttribute="leading" secondItem="AlH-IO-DbZ" secondAttribute="leading" id="wKo-cV-mJj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="6Hr-a6-A45" id="UdB-aD-Qcn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vnU-K5-fcJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1043" y="1197"/>
+        </scene>
         <!--Get Success View Controller-->
         <scene sceneID="6fS-1J-3aR">
             <objects>
