--- a/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
+++ b/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
@@ -1846,6 +1846,58 @@
             </objects>
             <point key="canvasLocation" x="1643" y="1655"/>
         </scene>
+        <!--Send Message To Unactive View Controller-->
+        <scene sceneID="zIJ-68-oav">
+            <objects>
+                <viewController storyboardIdentifier="ZXSendMessageToUnactiveViewController" id="jBk-Tn-z7d" customClass="ZXSendMessageToUnactiveViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mVt-ES-5Sd"/>
+                        <viewControllerLayoutGuide type="bottom" id="VYE-B8-ES9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VEq-BS-z7b">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Teg-xN-DdX">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="152"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7an-w8-8Fw">
+                                        <rect key="frame" x="10" y="17" width="580" height="135"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="jBk-Tn-z7d" id="105-5d-eM4"/>
+                                        </connections>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="7an-w8-8Fw" firstAttribute="leading" secondItem="Teg-xN-DdX" secondAttribute="leading" constant="10" id="3ya-R8-f8o"/>
+                                    <constraint firstAttribute="height" constant="152" id="Dip-6A-3rx"/>
+                                    <constraint firstItem="7an-w8-8Fw" firstAttribute="top" secondItem="Teg-xN-DdX" secondAttribute="top" constant="17" id="bRF-cH-ujw"/>
+                                    <constraint firstAttribute="bottom" secondItem="7an-w8-8Fw" secondAttribute="bottom" id="mh4-V7-tG7"/>
+                                    <constraint firstAttribute="trailing" secondItem="7an-w8-8Fw" secondAttribute="trailing" constant="10" id="xfG-jf-v6Y"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Teg-xN-DdX" secondAttribute="trailing" id="P9l-bM-eeW"/>
+                            <constraint firstItem="Teg-xN-DdX" firstAttribute="leading" secondItem="VEq-BS-z7b" secondAttribute="leading" id="msf-Ia-e2I"/>
+                            <constraint firstItem="Teg-xN-DdX" firstAttribute="top" secondItem="VEq-BS-z7b" secondAttribute="top" id="sPP-2b-39O"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="textView" destination="7an-w8-8Fw" id="5b3-oM-hvI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pl7-fn-9V7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2329" y="1664"/>
+        </scene>
         <!--Add Parent View Controller-->
         <scene sceneID="WOA-8d-Eqb">
             <objects>
